--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
-    <main class='row'>
-      <div class='row'>
-        <a class='button btn-import' href='#'>import</a>
-      </div>
-      <div class='row'>
-        <a class='button btn-save' href='#'>save</a>
+
+    <main>
+      <div id='button-holder'>
+        <a class='button btn-import-save' href='#'>import</a>
+        <p id='message'></p>
+        <section id='spinner-holder'>
+        </section>
       </div>
     </main>
 
@@ -25,12 +26,12 @@
       <header>
         <div class='row'>
           <div id='logo-holder' class='medium-2 columns'><img src='assets/logo.png'/></div>
-          <h1 class='medium-6 columns'>knitsights</h1>
+          <h1 class='medium-6 columns' id="main-title">knitsights</h1>
           <nav class='medium-4 columns end'>
             <ul>
-              <li>link to one thing | </li>
-              <li>link to another thing | </li>
-              <li>link to third thing</li>
+              <li>about | </li>
+              <li>faq | </li>
+              <li><a href='http://laurenfb.github.io/' title='bio' target='_blank'>lauren f. brink</a></li>
             </ul>
           </nav>
         </div>
@@ -40,7 +41,7 @@
 
     <script type="text/template" id="project-template">
       <div>
-        <h4><%- name %></h4>
+        <p><strong><%- name %></strong></p>
         <img src='<%- photoURL %>' title='<%- name %> photo'\>
         <p><%- timeInDays %> days</p>
       </div>
