--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
       <header>
         <div class='row'>
           <div id='logo-holder' class='medium-2 columns'><img src='assets/logo.png'/></div>
-          <h1 class='medium-6 columns' id="main-title">knitsights</h1>
-          <nav class='medium-4 columns end'>
+          <h1 class='medium-5 columns' id="main-title">knitsights</h1>
+          <nav class='medium-5 columns end'>
             <ul>
-              <li>about | </li>
-              <li>faq | </li>
-              <li><a href='http://laurenfb.github.io/' title='bio' target='_blank'>lauren f. brink</a></li>
+              <li><h5><a href='https://github.com/laurenfb/knitsights' title='about' target='_blank'>about knitsights</a></h5> </li>
+              <li><p id='no-margin'>-------------</p></li>
+              <li><h5><a href='http://laurenfb.github.io/' title='bio' target='_blank'>by lauren f. brink</a></h5></li>
             </ul>
           </nav>
         </div>
